--- a/app/package.json
+++ b/app/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@types/react": "^15.0.38",
     "@types/react-dom": "^15.5.1",
+    "@types/react-router-dom": "^4.0.7",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.2"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.2.1",
