add in configuration to the application

--- a/glide.yaml
+++ b/glide.yaml
@@ -2,3 +2,4 @@ package: github.com/team-tissue/labelizer-app
 import:
 - package: github.com/labstack/echo
   version: ~3.1
+- package: github.com/spf13/viper
