--- a/app/package.json
+++ b/app/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/query-string": "^4.3.1",
     "@types/react": "^15.0.38",
     "@types/react-bootstrap": "0.0.52",
     "@types/react-dom": "^15.5.1",
     "@types/react-router-dom": "^4.0.7",
+    "query-string": "^5.0.0",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
